# ml-intern

./: .gitignore  AGENT_CLI.md  ARCHITECTURE.md  AUTH_METHODS.md  DAEMON_24H.md  DEVELOPMENT.md  FRAMEWORK_SPEC.md  IMPLEMENTATION_PLAN.md  ML_INTERN_PROMPT.md  MODELS_COMPARISON.md  README.md  RUN_DAEMON.md  SPEC.md  agent.py  client_daemon.py  config.example.js  login.py  manifest.json  package.json  pyproject.toml  run_agent.py  run_agent_loop.py  run_daemon.py  run_latex_pipeline.py  start_daemon.py
.gates/: hook-log.jsonl
.gates/runs/: 19d532d61a3c.yaml  40246abe56a3.yaml  617424aa272d.yaml  965593535e25.yaml
.github/workflows/: test.yml
.superpowers/sdd/: progress.md  task-1-report.md  task-10-report.md  task-11-report.md  task-12-report.md  task-13-report.md  task-14-report.md  task-15-report.md  task-16-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md  task-9-report.md
docs/: API_REFERENCE.md  DAEMON.md  PLUGINS.md
examples/: daemon-config.json
scripts/: api_executor.py  headless_executor.py  run-headless.sh
src/: background.js  content.css  content.js  popup.html  popup.js
src/ml_agent/: __init__.py  agent_cli.py  agent_daemon.py  cli.py  daemon_server.py
src/ml_agent.egg-info/: SOURCES.txt  requires.txt
tests/integration/: test_agent.py  test_end_to_end.py
tests/unit/: test_auth.py  test_cli.py  test_config.py  test_logger.py  test_plugins.py  test_providers_base.py  test_providers_claude.py  test_providers_openai.py  test_providers_registry.py  (+1 more)
(+33 files in other folders)
